vcgen/app/Yul/ParYul.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 2.1.7 from app/Yul/ParYul.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pYulProgram -> YulProgram                   (0)
	%start_pYulBlock -> YulBlock                       (1)
	%start_pListYulStmt -> ListYulStmt                 (2)
	%start_pYulStmt -> YulStmt                         (3)
	%start_pListYulTypedIdent -> ListYulTypedIdent     (4)
	%start_pYulTypedIdent -> YulTypedIdent             (5)
	%start_pListYulCase -> ListYulCase                 (6)
	%start_pYulCase -> YulCase                         (7)
	%start_pYulType -> YulType                         (8)
	%start_pYulExpr -> YulExpr                         (9)
	%start_pListYulExpr -> ListYulExpr                 (10)
	%start_pYulLiteral -> YulLiteral                   (11)
	%start_pListYulIdent -> ListYulIdent               (12)
	%start_pYulIdent -> YulIdent                       (13)
	Ident -> L_Ident                                   (14)
	Integer -> L_integ                                 (15)
	String -> L_quoted                                 (16)
	HexNumber -> L_HexNumber                           (17)
	YulProgram -> 'object' String '{' 'code' YulBlock '}'   (18)
	YulBlock -> '{' ListYulStmt '}'                    (19)
	ListYulStmt ->                                     (20)
	ListYulStmt -> YulStmt ListYulStmt                 (21)
	YulStmt -> 'let' YulIdent ':=' YulExpr             (22)
	YulStmt -> 'let' YulIdent ':' YulType ':=' YulExpr   (23)
	YulStmt -> 'let' YulIdent ',' ListYulIdent ':=' YulExpr   (24)
	YulStmt -> YulIdent ':=' YulExpr                   (25)
	YulStmt -> YulIdent ',' ListYulIdent ':=' YulExpr   (26)
	YulStmt -> 'if' YulExpr YulBlock                   (27)
	YulStmt -> 'switch' YulExpr ListYulCase            (28)
	YulStmt -> 'for' YulBlock YulExpr YulBlock YulBlock   (29)
	YulStmt -> 'break'                                 (30)
	YulStmt -> 'continue'                              (31)
	YulStmt -> 'leave'                                 (32)
	YulStmt -> 'function' YulIdent '(' ListYulTypedIdent ')' YulBlock   (33)
	YulStmt -> 'function' YulIdent '(' ListYulTypedIdent ')' '->' ListYulTypedIdent YulBlock   (34)
	YulStmt -> YulExpr                                 (35)
	YulStmt -> YulBlock                                (36)
	ListYulTypedIdent -> YulTypedIdent                 (37)
	ListYulTypedIdent -> YulTypedIdent ',' ListYulTypedIdent   (38)
	YulTypedIdent -> YulIdent                          (39)
	YulTypedIdent -> YulIdent ':' YulType              (40)
	ListYulCase ->                                     (41)
	ListYulCase -> YulCase ListYulCase                 (42)
	YulCase -> 'case' YulLiteral YulBlock              (43)
	YulCase -> 'default' YulBlock                      (44)
	YulType -> 'bool'                                  (45)
	YulType -> 'u256'                                  (46)
	YulType -> 'u8'                                    (47)
	YulType -> 'u32'                                   (48)
	YulType -> 'u64'                                   (49)
	YulType -> 'u128'                                  (50)
	YulType -> 's256'                                  (51)
	YulExpr -> YulLiteral                              (52)
	YulExpr -> YulIdent                                (53)
	YulExpr -> YulIdent '(' ListYulExpr ')'            (54)
	ListYulExpr ->                                     (55)
	ListYulExpr -> YulExpr                             (56)
	ListYulExpr -> YulExpr ',' ListYulExpr             (57)
	YulLiteral -> Integer                              (58)
	YulLiteral -> HexNumber                            (59)
	YulLiteral -> String                               (60)
	YulLiteral -> 'true'                               (61)
	YulLiteral -> 'false'                              (62)
	ListYulIdent -> YulIdent                           (63)
	ListYulIdent -> YulIdent ',' ListYulIdent          (64)
	YulIdent -> Ident                                  (65)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'('            { PT _ (TS _ 1) }
	')'            { PT _ (TS _ 2) }
	','            { PT _ (TS _ 3) }
	'->'           { PT _ (TS _ 4) }
	':'            { PT _ (TS _ 5) }
	':='           { PT _ (TS _ 6) }
	'bool'         { PT _ (TS _ 7) }
	'break'        { PT _ (TS _ 8) }
	'case'         { PT _ (TS _ 9) }
	'code'         { PT _ (TS _ 10) }
	'continue'     { PT _ (TS _ 11) }
	'default'      { PT _ (TS _ 12) }
	'false'        { PT _ (TS _ 13) }
	'for'          { PT _ (TS _ 14) }
	'function'     { PT _ (TS _ 15) }
	'if'           { PT _ (TS _ 16) }
	'leave'        { PT _ (TS _ 17) }
	'let'          { PT _ (TS _ 18) }
	'object'       { PT _ (TS _ 19) }
	's256'         { PT _ (TS _ 20) }
	'switch'       { PT _ (TS _ 21) }
	'true'         { PT _ (TS _ 22) }
	'u128'         { PT _ (TS _ 23) }
	'u256'         { PT _ (TS _ 24) }
	'u32'          { PT _ (TS _ 25) }
	'u64'          { PT _ (TS _ 26) }
	'u8'           { PT _ (TS _ 27) }
	'{'            { PT _ (TS _ 28) }
	'}'            { PT _ (TS _ 29) }
	L_Ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }
	L_HexNumber    { PT _ (T_HexNumber $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pYulProgram rule  0
	%start_pYulBlock rule  1
	%start_pListYulStmt rule  2
	%start_pYulStmt rule  3
	%start_pListYulTypedIdent rule  4
	%start_pYulTypedIdent rule  5
	%start_pListYulCase rule  6
	%start_pYulCase rule  7
	%start_pYulType rule  8
	%start_pYulExpr rule  9
	%start_pListYulExpr rule  10
	%start_pYulLiteral rule  11
	%start_pListYulIdent rule  12
	%start_pYulIdent rule  13
	Ident           rule  14
	Integer         rule  15
	String          rule  16
	HexNumber       rule  17
	YulProgram      rule  18
	YulBlock        rule  19
	ListYulStmt     rules 20, 21
	YulStmt         rules 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36
	ListYulTypedIdent rules 37, 38
	YulTypedIdent   rules 39, 40
	ListYulCase     rules 41, 42
	YulCase         rules 43, 44
	YulType         rules 45, 46, 47, 48, 49, 50, 51
	YulExpr         rules 52, 53, 54
	ListYulExpr     rules 55, 56, 57
	YulLiteral      rules 58, 59, 60, 61, 62
	ListYulIdent    rules 63, 64
	YulIdent        rule  65

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pYulProgram -> . YulProgram                  (rule 0)

	'object'       shift, and enter state 68

	YulProgram     goto state 67

State 1

	%start_pYulBlock -> . YulBlock                      (rule 1)

	'{'            shift, and enter state 63

	YulBlock       goto state 66

State 2

	%start_pListYulStmt -> . ListYulStmt                (rule 2)

	'break'        shift, and enter state 55
	'continue'     shift, and enter state 56
	'false'        shift, and enter state 24
	'for'          shift, and enter state 57
	'function'     shift, and enter state 58
	'if'           shift, and enter state 59
	'leave'        shift, and enter state 60
	'let'          shift, and enter state 61
	'switch'       shift, and enter state 62
	'true'         shift, and enter state 25
	'{'            shift, and enter state 63
	L_Ident        shift, and enter state 15
	L_integ        shift, and enter state 26
	L_quoted       shift, and enter state 27
	L_HexNumber    shift, and enter state 28
	%eof           reduce using rule 20

	Ident          goto state 16
	Integer        goto state 20
	String         goto state 21
	HexNumber      goto state 22
	YulBlock       goto state 51
	ListYulStmt    goto state 64
	YulStmt        goto state 65
	YulExpr        goto state 53
	YulLiteral     goto state 31
	YulIdent       goto state 54

State 3

	%start_pYulStmt -> . YulStmt                        (rule 3)

	'break'        shift, and enter state 55
	'continue'     shift, and enter state 56
	'false'        shift, and enter state 24
	'for'          shift, and enter state 57
	'function'     shift, and enter state 58
	'if'           shift, and enter state 59
	'leave'        shift, and enter state 60
	'let'          shift, and enter state 61
	'switch'       shift, and enter state 62
	'true'         shift, and enter state 25
	'{'            shift, and enter state 63
	L_Ident        shift, and enter state 15
	L_integ        shift, and enter state 26
	L_quoted       shift, and enter state 27
	L_HexNumber    shift, and enter state 28

	Ident          goto state 16
	Integer        goto state 20
	String         goto state 21
	HexNumber      goto state 22
	YulBlock       goto state 51
	YulStmt        goto state 52
	YulExpr        goto state 53
	YulLiteral     goto state 31
	YulIdent       goto state 54

State 4

	%start_pListYulTypedIdent -> . ListYulTypedIdent    (rule 4)

	L_Ident        shift, and enter state 15

	Ident          goto state 16
	ListYulTypedIdentgoto state 49
	YulTypedIdent  goto state 50
	YulIdent       goto state 48

State 5

	%start_pYulTypedIdent -> . YulTypedIdent            (rule 5)

	L_Ident        shift, and enter state 15

	Ident          goto state 16
	YulTypedIdent  goto state 47
	YulIdent       goto state 48

State 6

	%start_pListYulCase -> . ListYulCase                (rule 6)

	'case'         shift, and enter state 43
	'default'      shift, and enter state 44
	%eof           reduce using rule 41

	ListYulCase    goto state 45
	YulCase        goto state 46

State 7

	%start_pYulCase -> . YulCase                        (rule 7)

	'case'         shift, and enter state 43
	'default'      shift, and enter state 44

	YulCase        goto state 42

State 8

	%start_pYulType -> . YulType                        (rule 8)

	'bool'         shift, and enter state 35
	's256'         shift, and enter state 36
	'u128'         shift, and enter state 37
	'u256'         shift, and enter state 38
	'u32'          shift, and enter state 39
	'u64'          shift, and enter state 40
	'u8'           shift, and enter state 41

	YulType        goto state 34

State 9

	%start_pYulExpr -> . YulExpr                        (rule 9)

	'false'        shift, and enter state 24
	'true'         shift, and enter state 25
	L_Ident        shift, and enter state 15
	L_integ        shift, and enter state 26
	L_quoted       shift, and enter state 27
	L_HexNumber    shift, and enter state 28

	Ident          goto state 16
	Integer        goto state 20
	String         goto state 21
	HexNumber      goto state 22
	YulExpr        goto state 33
	YulLiteral     goto state 31
	YulIdent       goto state 32

State 10

	%start_pListYulExpr -> . ListYulExpr                (rule 10)

	'false'        shift, and enter state 24
	'true'         shift, and enter state 25
	L_Ident        shift, and enter state 15
	L_integ        shift, and enter state 26
	L_quoted       shift, and enter state 27
	L_HexNumber    shift, and enter state 28
	%eof           reduce using rule 55

	Ident          goto state 16
	Integer        goto state 20
	String         goto state 21
	HexNumber      goto state 22
	YulExpr        goto state 29
	ListYulExpr    goto state 30
	YulLiteral     goto state 31
	YulIdent       goto state 32

State 11

	%start_pYulLiteral -> . YulLiteral                  (rule 11)

	'false'        shift, and enter state 24
	'true'         shift, and enter state 25
	L_integ        shift, and enter state 26
	L_quoted       shift, and enter state 27
	L_HexNumber    shift, and enter state 28

	Integer        goto state 20
	String         goto state 21
	HexNumber      goto state 22
	YulLiteral     goto state 23

State 12

	%start_pListYulIdent -> . ListYulIdent              (rule 12)

	L_Ident        shift, and enter state 15

	Ident          goto state 16
	ListYulIdent   goto state 18
	YulIdent       goto state 19

State 13

	%start_pYulIdent -> . YulIdent                      (rule 13)

	L_Ident        shift, and enter state 15

	Ident          goto state 16
	YulIdent       goto state 17

State 14

	Ident -> . L_Ident                                  (rule 14)

	L_Ident        shift, and enter state 15


State 15

	Ident -> L_Ident .                                  (rule 14)

	'('            reduce using rule 14
	')'            reduce using rule 14
	','            reduce using rule 14
	':'            reduce using rule 14
	':='           reduce using rule 14
	'break'        reduce using rule 14
	'case'         reduce using rule 14
	'continue'     reduce using rule 14
	'default'      reduce using rule 14
	'false'        reduce using rule 14
	'for'          reduce using rule 14
	'function'     reduce using rule 14
	'if'           reduce using rule 14
	'leave'        reduce using rule 14
	'let'          reduce using rule 14
	'switch'       reduce using rule 14
	'true'         reduce using rule 14
	'{'            reduce using rule 14
	'}'            reduce using rule 14
	L_Ident        reduce using rule 14
	L_integ        reduce using rule 14
	L_quoted       reduce using rule 14
	L_HexNumber    reduce using rule 14
	%eof           reduce using rule 14


State 16

	YulIdent -> Ident .                                 (rule 65)

	'('            reduce using rule 65
	')'            reduce using rule 65
	','            reduce using rule 65
	':'            reduce using rule 65
	':='           reduce using rule 65
	'break'        reduce using rule 65
	'case'         reduce using rule 65
	'continue'     reduce using rule 65
	'default'      reduce using rule 65
	'false'        reduce using rule 65
	'for'          reduce using rule 65
	'function'     reduce using rule 65
	'if'           reduce using rule 65
	'leave'        reduce using rule 65
	'let'          reduce using rule 65
	'switch'       reduce using rule 65
	'true'         reduce using rule 65
	'{'            reduce using rule 65
	'}'            reduce using rule 65
	L_Ident        reduce using rule 65
	L_integ        reduce using rule 65
	L_quoted       reduce using rule 65
	L_HexNumber    reduce using rule 65
	%eof           reduce using rule 65


State 17

	%start_pYulIdent -> YulIdent .                      (rule 13)

	%eof           accept


State 18

	%start_pListYulIdent -> ListYulIdent .              (rule 12)

	%eof           accept


State 19

	ListYulIdent -> YulIdent .                          (rule 63)
	ListYulIdent -> YulIdent . ',' ListYulIdent         (rule 64)

	','            shift, and enter state 86
	':='           reduce using rule 63
	%eof           reduce using rule 63


State 20

	YulLiteral -> Integer .                             (rule 58)

	')'            reduce using rule 58
	','            reduce using rule 58
	'break'        reduce using rule 58
	'case'         reduce using rule 58
	'continue'     reduce using rule 58
	'default'      reduce using rule 58
	'false'        reduce using rule 58
	'for'          reduce using rule 58
	'function'     reduce using rule 58
	'if'           reduce using rule 58
	'leave'        reduce using rule 58
	'let'          reduce using rule 58
	'switch'       reduce using rule 58
	'true'         reduce using rule 58
	'{'            reduce using rule 58
	'}'            reduce using rule 58
	L_Ident        reduce using rule 58
	L_integ        reduce using rule 58
	L_quoted       reduce using rule 58
	L_HexNumber    reduce using rule 58
	%eof           reduce using rule 58


State 21

	YulLiteral -> String .                              (rule 60)

	')'            reduce using rule 60
	','            reduce using rule 60
	'break'        reduce using rule 60
	'case'         reduce using rule 60
	'continue'     reduce using rule 60
	'default'      reduce using rule 60
	'false'        reduce using rule 60
	'for'          reduce using rule 60
	'function'     reduce using rule 60
	'if'           reduce using rule 60
	'leave'        reduce using rule 60
	'let'          reduce using rule 60
	'switch'       reduce using rule 60
	'true'         reduce using rule 60
	'{'            reduce using rule 60
	'}'            reduce using rule 60
	L_Ident        reduce using rule 60
	L_integ        reduce using rule 60
	L_quoted       reduce using rule 60
	L_HexNumber    reduce using rule 60
	%eof           reduce using rule 60


State 22

	YulLiteral -> HexNumber .                           (rule 59)

	')'            reduce using rule 59
	','            reduce using rule 59
	'break'        reduce using rule 59
	'case'         reduce using rule 59
	'continue'     reduce using rule 59
	'default'      reduce using rule 59
	'false'        reduce using rule 59
	'for'          reduce using rule 59
	'function'     reduce using rule 59
	'if'           reduce using rule 59
	'leave'        reduce using rule 59
	'let'          reduce using rule 59
	'switch'       reduce using rule 59
	'true'         reduce using rule 59
	'{'            reduce using rule 59
	'}'            reduce using rule 59
	L_Ident        reduce using rule 59
	L_integ        reduce using rule 59
	L_quoted       reduce using rule 59
	L_HexNumber    reduce using rule 59
	%eof           reduce using rule 59


State 23

	%start_pYulLiteral -> YulLiteral .                  (rule 11)

	%eof           accept


State 24

	YulLiteral -> 'false' .                             (rule 62)

	')'            reduce using rule 62
	','            reduce using rule 62
	'break'        reduce using rule 62
	'case'         reduce using rule 62
	'continue'     reduce using rule 62
	'default'      reduce using rule 62
	'false'        reduce using rule 62
	'for'          reduce using rule 62
	'function'     reduce using rule 62
	'if'           reduce using rule 62
	'leave'        reduce using rule 62
	'let'          reduce using rule 62
	'switch'       reduce using rule 62
	'true'         reduce using rule 62
	'{'            reduce using rule 62
	'}'            reduce using rule 62
	L_Ident        reduce using rule 62
	L_integ        reduce using rule 62
	L_quoted       reduce using rule 62
	L_HexNumber    reduce using rule 62
	%eof           reduce using rule 62


State 25

	YulLiteral -> 'true' .                              (rule 61)

	')'            reduce using rule 61
	','            reduce using rule 61
	'break'        reduce using rule 61
	'case'         reduce using rule 61
	'continue'     reduce using rule 61
	'default'      reduce using rule 61
	'false'        reduce using rule 61
	'for'          reduce using rule 61
	'function'     reduce using rule 61
	'if'           reduce using rule 61
	'leave'        reduce using rule 61
	'let'          reduce using rule 61
	'switch'       reduce using rule 61
	'true'         reduce using rule 61
	'{'            reduce using rule 61
	'}'            reduce using rule 61
	L_Ident        reduce using rule 61
	L_integ        reduce using rule 61
	L_quoted       reduce using rule 61
	L_HexNumber    reduce using rule 61
	%eof           reduce using rule 61


State 26

	Integer -> L_integ .                                (rule 15)

	')'            reduce using rule 15
	','            reduce using rule 15
	'break'        reduce using rule 15
	'case'         reduce using rule 15
	'continue'     reduce using rule 15
	'default'      reduce using rule 15
	'false'        reduce using rule 15
	'for'          reduce using rule 15
	'function'     reduce using rule 15
	'if'           reduce using rule 15
	'leave'        reduce using rule 15
	'let'          reduce using rule 15
	'switch'       reduce using rule 15
	'true'         reduce using rule 15
	'{'            reduce using rule 15
	'}'            reduce using rule 15
	L_Ident        reduce using rule 15
	L_integ        reduce using rule 15
	L_quoted       reduce using rule 15
	L_HexNumber    reduce using rule 15
	%eof           reduce using rule 15


State 27

	String -> L_quoted .                                (rule 16)

	')'            reduce using rule 16
	','            reduce using rule 16
	'break'        reduce using rule 16
	'case'         reduce using rule 16
	'continue'     reduce using rule 16
	'default'      reduce using rule 16
	'false'        reduce using rule 16
	'for'          reduce using rule 16
	'function'     reduce using rule 16
	'if'           reduce using rule 16
	'leave'        reduce using rule 16
	'let'          reduce using rule 16
	'switch'       reduce using rule 16
	'true'         reduce using rule 16
	'{'            reduce using rule 16
	'}'            reduce using rule 16
	L_Ident        reduce using rule 16
	L_integ        reduce using rule 16
	L_quoted       reduce using rule 16
	L_HexNumber    reduce using rule 16
	%eof           reduce using rule 16


State 28

	HexNumber -> L_HexNumber .                          (rule 17)

	')'            reduce using rule 17
	','            reduce using rule 17
	'break'        reduce using rule 17
	'case'         reduce using rule 17
	'continue'     reduce using rule 17
	'default'      reduce using rule 17
	'false'        reduce using rule 17
	'for'          reduce using rule 17
	'function'     reduce using rule 17
	'if'           reduce using rule 17
	'leave'        reduce using rule 17
	'let'          reduce using rule 17
	'switch'       reduce using rule 17
	'true'         reduce using rule 17
	'{'            reduce using rule 17
	'}'            reduce using rule 17
	L_Ident        reduce using rule 17
	L_integ        reduce using rule 17
	L_quoted       reduce using rule 17
	L_HexNumber    reduce using rule 17
	%eof           reduce using rule 17


State 29

	ListYulExpr -> YulExpr .                            (rule 56)
	ListYulExpr -> YulExpr . ',' ListYulExpr            (rule 57)

	')'            reduce using rule 56
	','            shift, and enter state 85
	%eof           reduce using rule 56


State 30

	%start_pListYulExpr -> ListYulExpr .                (rule 10)

	%eof           accept


State 31

	YulExpr -> YulLiteral .                             (rule 52)

	')'            reduce using rule 52
	','            reduce using rule 52
	'break'        reduce using rule 52
	'case'         reduce using rule 52
	'continue'     reduce using rule 52
	'default'      reduce using rule 52
	'false'        reduce using rule 52
	'for'          reduce using rule 52
	'function'     reduce using rule 52
	'if'           reduce using rule 52
	'leave'        reduce using rule 52
	'let'          reduce using rule 52
	'switch'       reduce using rule 52
	'true'         reduce using rule 52
	'{'            reduce using rule 52
	'}'            reduce using rule 52
	L_Ident        reduce using rule 52
	L_integ        reduce using rule 52
	L_quoted       reduce using rule 52
	L_HexNumber    reduce using rule 52
	%eof           reduce using rule 52


State 32

	YulExpr -> YulIdent .                               (rule 53)
	YulExpr -> YulIdent . '(' ListYulExpr ')'           (rule 54)

	'('            shift, and enter state 77
	')'            reduce using rule 53
	','            reduce using rule 53
	'break'        reduce using rule 53
	'case'         reduce using rule 53
	'continue'     reduce using rule 53
	'default'      reduce using rule 53
	'false'        reduce using rule 53
	'for'          reduce using rule 53
	'function'     reduce using rule 53
	'if'           reduce using rule 53
	'leave'        reduce using rule 53
	'let'          reduce using rule 53
	'switch'       reduce using rule 53
	'true'         reduce using rule 53
	'{'            reduce using rule 53
	'}'            reduce using rule 53
	L_Ident        reduce using rule 53
	L_integ        reduce using rule 53
	L_quoted       reduce using rule 53
	L_HexNumber    reduce using rule 53
	%eof           reduce using rule 53


State 33

	%start_pYulExpr -> YulExpr .                        (rule 9)

	%eof           accept


State 34

	%start_pYulType -> YulType .                        (rule 8)

	%eof           accept


State 35

	YulType -> 'bool' .                                 (rule 45)

	')'            reduce using rule 45
	','            reduce using rule 45
	':='           reduce using rule 45
	'{'            reduce using rule 45
	%eof           reduce using rule 45


State 36

	YulType -> 's256' .                                 (rule 51)

	')'            reduce using rule 51
	','            reduce using rule 51
	':='           reduce using rule 51
	'{'            reduce using rule 51
	%eof           reduce using rule 51


State 37

	YulType -> 'u128' .                                 (rule 50)

	')'            reduce using rule 50
	','            reduce using rule 50
	':='           reduce using rule 50
	'{'            reduce using rule 50
	%eof           reduce using rule 50


State 38

	YulType -> 'u256' .                                 (rule 46)

	')'            reduce using rule 46
	','            reduce using rule 46
	':='           reduce using rule 46
	'{'            reduce using rule 46
	%eof           reduce using rule 46


State 39

	YulType -> 'u32' .                                  (rule 48)

	')'            reduce using rule 48
	','            reduce using rule 48
	':='           reduce using rule 48
	'{'            reduce using rule 48
	%eof           reduce using rule 48


State 40

	YulType -> 'u64' .                                  (rule 49)

	')'            reduce using rule 49
	','            reduce using rule 49
	':='           reduce using rule 49
	'{'            reduce using rule 49
	%eof           reduce using rule 49


State 41

	YulType -> 'u8' .                                   (rule 47)

	')'            reduce using rule 47
	','            reduce using rule 47
	':='           reduce using rule 47
	'{'            reduce using rule 47
	%eof           reduce using rule 47


State 42

	%start_pYulCase -> YulCase .                        (rule 7)

	%eof           accept


State 43

	YulCase -> 'case' . YulLiteral YulBlock             (rule 43)

	'false'        shift, and enter state 24
	'true'         shift, and enter state 25
	L_integ        shift, and enter state 26
	L_quoted       shift, and enter state 27
	L_HexNumber    shift, and enter state 28

	Integer        goto state 20
	String         goto state 21
	HexNumber      goto state 22
	YulLiteral     goto state 84

State 44

	YulCase -> 'default' . YulBlock                     (rule 44)

	'{'            shift, and enter state 63

	YulBlock       goto state 83

State 45

	%start_pListYulCase -> ListYulCase .                (rule 6)

	%eof           accept


State 46

	ListYulCase -> YulCase . ListYulCase                (rule 42)

	'break'        reduce using rule 41
	'case'         shift, and enter state 43
	'continue'     reduce using rule 41
	'default'      shift, and enter state 44
	'false'        reduce using rule 41
	'for'          reduce using rule 41
	'function'     reduce using rule 41
	'if'           reduce using rule 41
	'leave'        reduce using rule 41
	'let'          reduce using rule 41
	'switch'       reduce using rule 41
	'true'         reduce using rule 41
	'{'            reduce using rule 41
	'}'            reduce using rule 41
	L_Ident        reduce using rule 41
	L_integ        reduce using rule 41
	L_quoted       reduce using rule 41
	L_HexNumber    reduce using rule 41
	%eof           reduce using rule 41

	ListYulCase    goto state 82
	YulCase        goto state 46

State 47

	%start_pYulTypedIdent -> YulTypedIdent .            (rule 5)

	%eof           accept


State 48

	YulTypedIdent -> YulIdent .                         (rule 39)
	YulTypedIdent -> YulIdent . ':' YulType             (rule 40)
